--- a/latex/main.tex
+++ b/latex/main.tex
@@ -782,27 +782,17 @@ Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, 
 
 Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette indfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf. Vi har f.eks. kun ni testpersoner som er ældre end 40. 
 
-
-Ukontrolleret forsøg
-Mus vs andre devices
-Fjernelse af standardafvigelser
-Bias
-
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
+I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere, er at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.
 
+For vores tunnel- og spiralopgaver har vi baseret vores forsøg på tidligere udførte forsøg af \cite{accot1997}. Det er her vigtigt at nævne at \cite{accot1997} havde 16 tunnelopgaver og 16 spiralopgaver, mens vi kun havde fire tunnelopgaver og fire spiralopgaver. Dette har ført til at vi har fået langt mindre data og vil også gøre at vores affine modeller ikke nødvendigvis vil passe lige så godt som \cite{accot1997} gjorde. Dette afspejles også af at formlerne givet i \cite{accot1997} i vores forsøg ikke gør den store forskel, når vi sammenligner dem med AIC. Derudover havde vi flere testpersoner som gik imod forventning og blev hurtigere jo større $ID$. Dette viser også at Fitts' Lov, selv i Accot \& Zhai's modificeret version, ikke nødvendigvis kan bruges på navigationsopgaver.
 
-Vores data har vist at tre af de fire modeller for Fitts' Lov er meget ens. 
-Hvor udbredte er de fire formler
-Sammenligne med Accot og Sheik
-Sammenligne med Two Large Datasets
-Er a og b realistiske
-Error rate
-AIC
-Residualplots
+Vores AIC værdier viste at Meyer's var den bedste af de fire formuleringer, men viste samtidig også at den var meget tæt fulgt af Fitts' og MacKenzie's. Det viser at der ikke skal meget varians i dataen til, før at det vil være en af de to andre som er bedst. Meyer's formulering har til gengæld en væsentlig højere AIC værdi og vi kan derfor sige at den passer dårligere til dataen end nogle af de andre. Vores residualplots viser samme mønster. Meyer's formulering passer bedst til den indsamlede data, men små variationer i dataen ville kunne gøre både Fitts' og MacKenzie's bedre. Igen ses det at Welford's formulering passer væsentlig dårligere til dataen. Dette ses især ved lavere værdier af $ID$, hvilket også passer med at Welford's mangler det additive led og derfor først vil approksimere de andre ved højere værdier.
 
-BIAS
+Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne vores resultater med deres. \cite{goldberg2015} fandt frem til at Meyer's var den bedste formel, når sværhedsgraden var lille, mens Fitts' formulering var den bedste, når sværhedsgraden var stor. Deres resultater var inkonsistente derimellem. Når de kiggede på MacKenzie's formulering, så var den klart bedre end både Fitts' og Meyer's. Dette modsiger vores resultater, hvor Meyer's var bedst. Grunden til dette kan være at vi generelt kigger på et område, hvor små variationer i dataen gør en stor forskel for hvilken formulering der passer bedst. Da vi på samme tid har med mennesker at gøre, så er der mange variable som kan have en indflydelse på hvor hurtigt de kan gøre det. Disse variabler kunne f.eks. være træthed, opmærksomhed, skærmens lysstyrke, fysiske skader ol.
 
+NOGET MED AT DET IKKE PASSER PERFEKT OG ALDRIG VIL! FITTS' LOV ER INCOMPLETE OG ER INDTIL VIDERE DATASPECIFIK!
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
 
