--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -31,9 +31,9 @@
 \chapter{Tekst til crowdsourcing}
 For at crowdsource vores eksperiment har vi delt følgende tekst:
 \\\\\textit{"Hej,\\ vi er tre datalogi studerende ved Københavns Universitet, som er i gang med vores bacheloropgave. For at kunne have nogle data at analysere, har vi lavet denne hjemmeside med 'pegeopgaver'. Opgaverne tager cirka 10-15 minutter at udføre og er skidesjove! Det ville derfor være utrolig værdsat, hvis du ville gå ind på følgende hjemmeside \url{http://www.codeit.io/bachelor/index.html} og udføre opgaverne. Deltag senest d. 27/04.
-\\Eventulle spørgsmål kan henvendes til en af os på; bdj816@alumni.ku.dk, hmd200@alumni.ku.dk, qgf142@alumni.ku.dk"}
+\\Eventulle spørgsmål kan henvendes til en af os på;\\bdj816@alumni.ku.dk, hmd200@alumni.ku.dk, qgf142@alumni.ku.dk"}
 \\\\\textit{"Hello,\\ We are three computer science students at the University of Copenhagen, who are currently working on our bachelor thesis. We have made the following webpage with 'pointingtasks' in order to have some data to analyze. The tasks takes approximately 10-15 minuttes and are super fun! It would therefore be very appreciated if you would visit the webpage at \url{http://www.codeit.io/bachelor/index.html} and complete the tasks. Deadline is the 27th of April.
-\\Any questions regarding the projects are welcome at either of these emails; bdj816@alumni.ku.dk, hmd200@alumni.ku.dk, qgf142@alumni.ku.dk"}
+\\Any questions regarding the projects are welcome at either of these emails;\\bdj816@alumni.ku.dk, hmd200@alumni.ku.dk, qgf142@alumni.ku.dk"}
 
 %-- Skærmbilleder af eksperiment --%
 \chapter{Skærmbilleder af eksperiment}
