--- a/latex/main.tex
+++ b/latex/main.tex
@@ -840,6 +840,20 @@ Fitts & 20262.07 & 36.4
 \section*{Modelanalyse af hastighedsprofiler}
 Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvantitativ og en kvalitativ analyse af de indsamlede hastighedsprofiler fra crowdsourcingdeltagernes pegeopgaver.
 
+\begin{table}[h]
+	\centering
+	\begin{tabular}{llllll}
+		Alder           & Køn               & Computerspil              & Computere                 & Hånd                & Pegeenhed            \\\hline
+		gns: \hfill24.5 & mand: \hfill88\%  & $<1$ time: \hfill24\%     & $<1$ time: \hfill2\%      & venstre: \hfill14\% & mus: \hfill61\%      \\
+		min: \hfill13   & kvinde: \hfill9\% & $1-5$ timer: \hfill24\%   & $1-5$ timer: \hfill1\%    & højre: \hfill83\%   & touchpad: \hfill36\% \\
+		max: \hfill62   & andet: \hfill3\%  & $5-15$ timer: \hfill27\%  & $5-15$ timer: \hfill2\%   & andet: \hfill3\%    & andet: \hfill3\%     \\
+		                &                   & $15-40$ timer: \hfill22\% & $15-40$ timer: \hfill24\% &                     &\\
+		                &                   & $>40$ timer: \hfill3\%    & $>40$ timer: \hfill71\%   &                     &
+	\end{tabular}
+	\caption{TODO: Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
+	\label{tab:persons_average}
+\end{table}
+
 \addcontentsline{toc}{subsection}{Kvalitativ analyse}
 \subsection*{Kvalitativ analyse}
 Vi har valgt at udføre en kvalitativ analyse af bevægelsesbanerne, da det vil give os et større overblik over den indsamlede data og vise os hvilke tendenser der kan observeres.
@@ -887,6 +901,20 @@ På figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individua
 \addcontentsline{toc}{chapter}{Diskussion}
 \chapter*{Diskussion}
 Vi vil i dette afsnit forsøge at diskutere vores fremgangsmåde og resultater fra både vores forsøgsopstilling og analyse.
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{ll}
+		Computerspil & Gennemsnitstid\\\hline
+		$<1$ time    & 1112.58ms\\
+		1-5 timer    & 1030.27ms\\
+		5-15 timer   & 979.99ms\\
+		15-40 timer  & 932.77ms\\
+		$>40$ timer  & 896.41ms\\
+	\end{tabular}
+	\caption{Tabel med oversigt over testpersoners spilletid, sammenlignet med deres gennemsnitlige gennemførselshastighed af pegeopgaverne}
+	\label{tab:times_average}
+\end{table}
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
