--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -304,3 +304,12 @@
   year={1986},
   organization={SAGE Publications}
 }
+
+@inproceedings{wyeld2013,
+  title={How are gamers better at drawing teapots than non-gamers?},
+  author={Wyeld, Theodor and Williams, Benedict and Barbuto, Zak},
+  booktitle={Proceedings of the 25th Australian Computer-Human Interaction Conference: Augmentation, Application, Innovation, Collaboration},
+  pages={221--224},
+  year={2013},
+  organization={ACM}
+}
