--- a/latex/main.tex
+++ b/latex/main.tex
@@ -173,9 +173,6 @@ Han nævner i afsnittet \emph{Physical Interpretation} at skæringspunktet ideel
 
 En af de mest accepterede udledninger af Fitts' lov stammer fra modellen \emph{deterministic error-corrections} originalt fremstillet af \cite{crossman1983}, og bygger på idéen om at en bevægelsesopgave består af en række iterative korrigerende bevægelser. MacKenzie refererer til simpliciteten af denne model som værende appellerende, men kalder de underliggende antagelser for suspekte. Han refererer til \cite{langolf1976}, hvor der blev observeret bevægelsesopgaver som kun indeholdte én korrigerende bevægelse, selvom det generelt forudses at der vil være flere korrigerende bevægelser ved en vis størrelse af $A/W$.\\
 
-% TODO: Indsæt citat fra artiklen i stedet, for at give en idé om MacKencies holdning til Fitts' originale formulering
-%MacKenzie ser Fitts' lov som en analogi med et behov for en teori til at støtte op om den - teori baseret på menneskelig motorik, ikke informationsteori.\\\\
-
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth]{images/illustrations/mackenzie_plot_1}
@@ -965,8 +962,19 @@ Vores AIC værdier viste at Meyer's var den bedste af de fire formuleringer, men
 Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne vores resultater med deres. \cite{goldberg2015} fandt frem til at Meyer's var den bedste formel, når sværhedsgraden var lille, mens Fitts' formulering var den bedste, når sværhedsgraden var stor. Deres resultater var inkonsistente derimellem. Når de kiggede på MacKenzie's formulering, så var den klart bedre end både Fitts' og Meyer's. Dette modsiger vores resultater, hvor Meyer's var bedst. Grunden til dette kan være at vi generelt kigger på et område, hvor små variationer i dataen gør en stor forskel for hvilken formulering der passer bedst. Da vi på samme tid har med mennesker at gøre, så er der mange variable som kan have en indflydelse på hvor hurtigt de kan gøre det. Disse variabler kunne f.eks. være træthed, opmærksomhed, skærmens lysstyrke, fysiske skader ol.
 
 NOGET MED AT DET IKKE PASSER PERFEKT OG ALDRIG VIL! FITTS' LOV ER INCOMPLETE OG ER INDTIL VIDERE DATASPECIFIK!
-%\addcontentsline{toc}{chapter}{Konklusion}
-%\chapter*{Konklusion}
+
+\addcontentsline{toc}{chapter}{Konklusion}
+\chapter*{Konklusion}
+
+\textbf{Konklusionen er afslutningen på din akademiske opgave. Her fortæller du din læser hvad du har fundet ud af i din undersøgelse/analyse, og hvorfor det er vigtigt.}
+Konklusionen kan indeholde:
+\begin{itemize}
+	\item opgavens hovedpunkter og resultater i kort form
+	\item svar på problemformuleringen
+	\item vurdering af metode i form af en nuancering og evaluering af din fremgangsmåde
+	\item perspektivering af emnet – hvis der er basis for det
+\end{itemize}
+
 
 \nocite{*}
 \input{appendices.tex}
